--- a/ChampionMains.Pyrobot/content/css/mdlStyles.scss
+++ b/ChampionMains.Pyrobot/content/css/mdlStyles.scss
@@ -3,7 +3,7 @@
 // 1.  Configuration and helpers
 
 // MDL image path
-$image_path: '~/content/mdl-img/' !default;
+$image_path: '~/node_modules/material-design-lite/src/images/' !default;
 
 // Material Design Lite
 @import '~/node_modules/material-design-lite/src/variables';
