--- a/ChampionMains.Pyrobot/Views/Profile/newIndex.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/newIndex.cshtml
@@ -1,4 +1,5 @@
-﻿@using ChampionMains.Pyrobot.Models
+﻿@using System.Web.Optimization
+@using ChampionMains.Pyrobot.Models
 
 @{
     Layout = "~/Views/_newMaster.cshtml";
@@ -9,10 +10,10 @@
 }
 
 @section head {
-    <link href="@Url.Content("~/content/css/_vueChampBadge.scss")" rel="stylesheet" type="text/css" />
-    <link href="@Url.Content("~/content/css/_vueRankBadge.scss")" rel="stylesheet" type="text/css" />
-    <link href="@Url.Content("~/content/css/newProfile.scss")" rel="stylesheet" type="text/css" />
-    <link href="/profile/api/flaircss" rel="stylesheet" type="text/css" />
+    @Styles.Render("~/content/css/_vueChampBadge.scss")
+    @Styles.Render("~/content/css/_vueRankBadge.scss")
+    @Styles.Render("~/content/css/newProfile.scss")
+    @Styles.Render("~/profile/api/flaircss")
 }
 
 @section tail {
@@ -71,7 +72,7 @@
                         Confirm you own this summoner by changing your <em>summoner icon</em> to the following:
                     </p>
                     <img class="fade summonerIcon" :class="{ 'fade-hide': profileIcon === null }"
-                            :src="'https://cdn.communitydragon.org/latest/profile-icon/' + (profileIcon || 0)" />
+                         :src="'https://cdn.communitydragon.org/latest/profile-icon/' + (profileIcon || 0)" />
                     <p class="mdl-color-text--red" style="margin: 16px 0 0 0;">{{ summonerValidError }}</p>
                 </div>
             </div>
@@ -84,42 +85,40 @@
             </div>
         </div>
     </dialog>
+
+    <dialog class="mdl-dialog" id="modal-edit-subredditflair">
+        <h4 class="mdl-dialog__title">Edit Flair</h4>
+        <div class="mdl-dialog__content mdl-typography--text-center">
+            <flair-display v-if="set" :subreddit-data="subredditData" :rank-data="rankData" :champ-data="champData"></flair-display>
+        </div>
+        <div class="mdl-dialog__content">
+            <label v-if="!set || subredditData.rankEnabled" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-rank-emblem">
+                <input type="checkbox" id="checkbox-rank-emblem" class="mdl-checkbox__input" v-model="subredditData.flair.rankEnabled">
+                <span class="mdl-checkbox__label">Rank Emblem</span>
+            </label>
+            <label v-if="!set || subredditData.championMasteryEnabled" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-mastery-emblem">
+                <input type="checkbox" id="checkbox-mastery-emblem" class="mdl-checkbox__input" v-model="subredditData.flair.championMasteryEnabled">
+                <span class="mdl-checkbox__label">Mastery Emblem</span>
+            </label>
+            <label v-if="!set || subredditData.championMasteryTextEnabled" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-mastery-points">
+                <input type="checkbox" id="checkbox-mastery-points" class="mdl-checkbox__input" v-model="subredditData.flair.championMasteryTextEnabled">
+                <span class="mdl-checkbox__label">Mastery Points</span>
+            </label>
+            <label v-if="!set || subredditData.prestigeEnabled" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-prestige">
+                <input type="checkbox" id="checkbox-prestige" class="mdl-checkbox__input" v-model="subredditData.flair.prestigeEnabled">
+                <span class="mdl-checkbox__label">Prestige</span>
+            </label>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input class="mdl-textfield__input" type="text" id="flair-text" v-model="subredditData.flair.flairText">
+                <label class="mdl-textfield__label" for="flair-text">Flair Text</label>
+            </div>
+        </div>
+        <div class="mdl-dialog__actions">
+            <button type="button" class="mdl-button mdl-js-button" @@click="saveSubredditFlair()">Save</button>
+            <button type="button" class="mdl-button mdl-js-button" @@click="closeDialog()">Cancel</button>
+        </div>
+    </dialog>
     
-    <div id="dialogApp">
-        <dialog class="mdl-dialog" id="modal-edit-subredditflair">
-            <h4 class="mdl-dialog__title">Edit Flair</h4>
-            <div class="mdl-dialog__content mdl-typography--text-center">
-                <flair-display v-if="subredditFlairData.set" :subreddit-data="subredditFlairData.subredditData"
-                               :rank-data="subredditFlairData.rankData" :champ-data="subredditFlairData.champData"></flair-display>
-            </div>
-            <div class="mdl-dialog__content">
-                <label v-if="!subredditFlairData.set || subredditFlairData.subredditData.rankEnabled" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-rank-emblem">
-                    <input type="checkbox" id="checkbox-rank-emblem" class="mdl-checkbox__input" v-model="subredditFlairData.subredditData.flair.rankEnabled">
-                    <span class="mdl-checkbox__label">Rank Emblem</span>
-                </label>
-                <label v-if="!subredditFlairData.set || subredditFlairData.subredditData.championMasteryEnabled" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-mastery-emblem">
-                    <input type="checkbox" id="checkbox-mastery-emblem" class="mdl-checkbox__input" v-model="subredditFlairData.subredditData.flair.championMasteryEnabled">
-                    <span class="mdl-checkbox__label">Mastery Emblem</span>
-                </label>
-                <label v-if="!subredditFlairData.set || subredditFlairData.subredditData.championMasteryTextEnabled" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-mastery-points">
-                    <input type="checkbox" id="checkbox-mastery-points" class="mdl-checkbox__input" v-model="subredditFlairData.subredditData.flair.championMasteryTextEnabled">
-                    <span class="mdl-checkbox__label">Mastery Points</span>
-                </label>
-                <label v-if="!subredditFlairData.set || subredditFlairData.subredditData.prestigeEnabled" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-prestige">
-                    <input type="checkbox" id="checkbox-prestige" class="mdl-checkbox__input" v-model="subredditFlairData.subredditData.flair.prestigeEnabled">
-                    <span class="mdl-checkbox__label">Prestige</span>
-                </label>
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" type="text" id="flair-text" v-model="subredditFlairData.subredditData.flair.flairText">
-                    <label class="mdl-textfield__label" for="flair-text">Flair Text</label>
-                </div>
-            </div>
-            <div class="mdl-dialog__actions">
-                <button type="button" class="mdl-button mdl-js-button" @@click="saveSubredditFlair($event)">Save</button>
-                <button type="button" class="mdl-button mdl-js-button" @@click="closeDialog($event.target)">Cancel</button>
-            </div>
-        </dialog>
-    </div>
 
     <script src="@Url.Content("~/content/js/vueProfile.js")" type="text/javascript"></script>
     <script type="text/javascript">
@@ -180,7 +179,7 @@
                     <div class="points">{{ summoner.totalPoints | separator }}</div>
                 </div>
                 <div class="controls">
-                    <button class="mdl-button mdl-js-button mdl-button--primary" :disabled="isSummonerUpdating(summoner)" @@click="promptRemoveSummoner(summoner, $event)">
+                    <button class="mdl-button mdl-js-button mdl-button--primary" :disabled="isSummonerUpdating(summoner)" @@click="promptRemoveSummoner(summoner)">
                         Remove
                     </button>
                     <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--primary" :disabled="isSummonerUpdating(summoner)" @@click="updateSummoner(summoner, $event)">
@@ -209,7 +208,7 @@
                 </div>
                 <div class="controls">
                     <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--primary"
-                            @@click="editSubredditFlair(subreddit, topRankedSummoners[0], profileState.champions[subreddit.championId], $event)">
+                            @@click="editSubredditFlair(subreddit, topRankedSummoners[0], profileState.champions[subreddit.championId])">
                         Edit
                     </button>
                 </div>
