--- a/ChampionMains.Pyrobot/Views/_newMaster.cshtml
+++ b/ChampionMains.Pyrobot/Views/_newMaster.cshtml
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="~/Bundles/dialogPolyfill" />
-    <link rel="stylesheet" href="~/Content/css/mdlStyles.scss" />
+    @Styles.Render("~/Bundles/dialogPolyfill")
+    @Styles.Render("~/Content/css/mdlStyles.scss")
 
     <!-- favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="~/content/icons/apple-icon-57x57.png">
@@ -42,15 +42,21 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- scripts -->
-    <script src="~/content/js/ga.js"></script>
-    <script src="~/Bundles/polyfills" type="text/javascript"></script>
+    @Scripts.Render("~/content/js/ga.js")
+    @Scripts.Render("~/Bundles/polyfills")
     @if (Page.HasVue != null)
-    { <script src="~/Bundles/vue" type="text/javascript"></script> }
+    { @Scripts.Render("~/Bundles/vue") }
 
     @RenderSection("head", false)
 </head>
 <body class="mdlext-dark-color-theme mdl-color--grey-900">
-    <div class="demo-layout mdl-layout mdl-js-layout">
+    <div class="main-layout mdl-layout mdl-js-layout">
+        <div id="background-canvas">
+            <div class="left" :style="{ 'background-image': 'url(https://cdn.communitydragon.org/latest/champion/' +
+                 championId + '/splash-art/centered/skin/' + skinId + ')' }"></div>
+            <div class="right" :style="{ 'background-image': 'url(https://cdn.communitydragon.org/latest/champion/' +
+                 championId + '/splash-art/centered/skin/' + skinId + ')' }"></div>
+        </div>
         <header class="mdl-layout__header mdl-layout__header--scroll mdl-layout__header--transparent">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
@@ -77,7 +83,7 @@
     </div>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js" type="text/javascript"></script>
     @* @Scripts.Render not used b/c cannot access expanded bundle. *@
-    <script src="~/Bundles/npmScripts" type="text/javascript"></script>
+    @Scripts.Render("~/Bundles/npmScripts")
     @RenderSection("tail", false)
 </body>
 </html>
