--- a/ChampionMains.Pyrobot/content/css/mdlStyles.scss
+++ b/ChampionMains.Pyrobot/content/css/mdlStyles.scss
@@ -97,43 +97,45 @@ dialog::backdrop, dialog + .backdrop {
 
 ////////
 
-.demo-layout {
+.main-layout {
     position: relative;
     background-image: url('/content/img/noise.png');
     background-size: 48px;
     background-repeat: repeat;
 }
 
-.demo-layout::before,
-.demo-layout::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    z-index: -1;
-    transform: translateX(-50%);
-    width: 100%;
-    min-width: 480px;
-    background-image: url('https://cdn.communitydragon.org/latest/champion/99/splash-art/centered/skin/8');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: 100% 0%;
-}
-
-@media (min-width: 840px) {
-    .demo-layout::before {
-        transform: translateX(-50%) scaleX(-1);
-        left: -30%;
+#background-canvas {
+    .left,
+    .right {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        z-index: -1;
+        transform: translateX(-50%);
+        width: 100%;
+        min-width: 480px;
+        background-image: url('https://cdn.communitydragon.org/latest/champion/99/splash-art/centered/skin/8');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-position: 100% 0%;
     }
 
-    .demo-layout::after {
-        left: 70%;
+    @media (min-width: 840px) {
+        .left {
+            transform: translateX(-50%) scaleX(-1);
+            left: -25%;
+        }
+
+        .right {
+            left: 75%;
+        }
     }
 }
 
-.demo-layout .mdl-layout__header,
-.demo-layout .mdl-layout__drawer-button {
+.main-layout .mdl-layout__header,
+.main-layout .mdl-layout__drawer-button {
     /* This background is dark, so we set text to white. Use 87% black instead if
      your background is light. */
     color: white;
@@ -153,7 +155,7 @@ dialog::backdrop, dialog + .backdrop {
     margin-bottom: 80px;
 }
 
-.demo-layout.is-small-screen .demo-content {
+.main-layout.is-small-screen .demo-content {
     padding: 40px 28px;
 }
 
